--- a/app/src/main/res/values-az/strings.xml
+++ b/app/src/main/res/values-az/strings.xml
@@ -69,7 +69,7 @@
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Səsin dinlənməsində xəta!</string>
   <!--BlockedContactsActivity-->
-  <string name="BlockedContactsActivity_blocked_contacts">Əlaqələr kilidlidir</string>
+  <!-- Removed by excludeNonTranslatables <string name="BlockedContactsActivity_blocked_contacts">Əlaqələr kilidlidir</string> -->
   <!--BucketedThreadMedia-->
   <string name="BucketedThreadMedia_Today">Bu gün</string>
   <string name="BucketedThreadMedia_Yesterday">Dünən</string>
@@ -1105,7 +1105,7 @@
   <string name="preferences__typing_indicators">Yazışma indikatoru</string>
   <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">Yazışma indikatorları deaktiv edilsə, başqa şəxs mesaj yazdığı zaman məlumat almayacaqsan.</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">Fərdiləşdirilmiş təlimin deaktiv edilməsini klaviaturadan istə</string>
-  <string name="preferences_app_protection__blocked_contacts">Əlaqələr kilidlidir</string>
+  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__blocked_contacts">Əlaqələr kilidlidir</string> -->
   <string name="preferences_chats__when_using_mobile_data">Mobil internet istifadə edərkən</string>
   <string name="preferences_chats__when_using_wifi">Wi-Fi istifadə edərkən</string>
   <string name="preferences_chats__when_roaming">Rominq zamanı</string>
