--- a/app/src/main/res/values-bn/strings.xml
+++ b/app/src/main/res/values-bn/strings.xml
@@ -78,7 +78,7 @@
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">অডিও চালাতে ব্যর্থ!</string>
   <!--BlockedContactsActivity-->
-  <string name="BlockedContactsActivity_blocked_contacts">অবরূদ্ধ পরিচিতিসমূহ</string>
+  <!-- Removed by excludeNonTranslatables <string name="BlockedContactsActivity_blocked_contacts">অবরূদ্ধ পরিচিতিসমূহ</string> -->
   <!--BlockUnblockDialog-->
   <string name="BlockUnblockDialog_block_and_leave_s">ব্লক করুন ও ছেড়ে যান %1$s?</string>
   <string name="BlockUnblockDialog_block_s">ব্লক %1$s?</string>
@@ -1563,7 +1563,7 @@
   <string name="preferences__typing_indicators">টাইপিং সূচক</string>
   <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">যদি টাইপিং সূচকগুলি অক্ষম থাকে তবে আপনি অন্যের কাছ থেকে টাইপিং সূচকগুলি দেখতে সক্ষম হবেন না।</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">ব্যক্তিগতকৃত শিক্ষাকে অক্ষম করতে কীবোর্ডের অনুরোধ করুন</string>
-  <string name="preferences_app_protection__blocked_contacts">ব্লককৃত পরিচিতিসমূহ</string>
+  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__blocked_contacts">ব্লককৃত পরিচিতিসমূহ</string> -->
   <string name="preferences_chats__when_using_mobile_data">মোবাইল ডেটা ব্যবহার করার সময়</string>
   <string name="preferences_chats__when_using_wifi">ওয়াইফাই ব্যবহার করার সময়</string>
   <string name="preferences_chats__when_roaming">রোমিং করার সময়</string>
