--- a/app/src/main/res/values-jv/strings.xml
+++ b/app/src/main/res/values-jv/strings.xml
@@ -70,7 +70,7 @@
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Enten masalah kala muter suwanten!</string>
   <!--BlockedContactsActivity-->
-  <string name="BlockedContactsActivity_blocked_contacts">Kontak ingkang dipunblokir</string>
+  <!-- Removed by excludeNonTranslatables <string name="BlockedContactsActivity_blocked_contacts">Kontak ingkang dipunblokir</string> -->
   <!--BlockUnblockDialog-->
   <string name="BlockUnblockDialog_group_members_will_be_able_to_add_you">Anggota grup bakal saged minggahaken sampeyan datheng grup niki malih.</string>
   <string name="BlockUnblockDialog_unblock">Uculaken blokiranipun</string>
@@ -1308,7 +1308,7 @@
   <string name="preferences__typing_indicators">Indikator ketikan</string>
   <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">Menawi indikator ketikan mboten dipunaktifaken, sampeyan mboten saged ningali indikator ketikan saking tiyang benten.</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">Sagedaken keyboard ngenonaktifaken panyinaon ingkang dipunpersonalisasi</string>
-  <string name="preferences_app_protection__blocked_contacts">Kontak ingkang dipunblokir</string>
+  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__blocked_contacts">Kontak ingkang dipunblokir</string> -->
   <string name="preferences_chats__when_using_mobile_data">Kala ngginakaken data seluler</string>
   <string name="preferences_chats__when_using_wifi">Kala ngginakaken Wi-Fi</string>
   <string name="preferences_chats__when_roaming">Kala roaming</string>
