--- a/app/src/main/res/values-tl/strings.xml
+++ b/app/src/main/res/values-tl/strings.xml
@@ -76,7 +76,7 @@
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Nagka-error sa pagpapatugtog ng audio!</string>
   <!--BlockedContactsActivity-->
-  <string name="BlockedContactsActivity_blocked_contacts">Mga naka-block na kontak</string>
+  <!-- Removed by excludeNonTranslatables <string name="BlockedContactsActivity_blocked_contacts">Mga naka-block na kontak</string> -->
   <!--BlockUnblockDialog-->
   <string name="BlockUnblockDialog_block_and_leave_s">I-block at umalis sa %1$s?</string>
   <string name="BlockUnblockDialog_block_s">I-block ang %1$s?</string>
@@ -1402,7 +1402,7 @@
   <string name="preferences__typing_indicators">Typing indicators</string>
   <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">Kung naka-disable ang typing indicators, hindi ka makakakita ng typing indicators mula sa iba.</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">Hilingin sa keyboard na i-disable ang personalisadong pagkakatuto</string>
-  <string name="preferences_app_protection__blocked_contacts">Mga naka-block na kontak</string>
+  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__blocked_contacts">Mga naka-block na kontak</string> -->
   <string name="preferences_chats__when_using_mobile_data">Kapag gumagamit ng mobile data</string>
   <string name="preferences_chats__when_using_wifi">Kapag gumagamit ng WI-FI</string>
   <string name="preferences_chats__when_roaming">Kapag roaming</string>
