--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -80,7 +80,7 @@
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Fehler bei der Audiowiedergabe</string>
   <!--BlockedContactsActivity-->
-  <string name="BlockedContactsActivity_blocked_contacts">Blockierte Kontakte</string>
+  <!-- Removed by excludeNonTranslatables <string name="BlockedContactsActivity_blocked_contacts">Blockierte Kontakte</string> -->
   <!--BlockUnblockDialog-->
   <string name="BlockUnblockDialog_block_and_leave_s">%1$s blockieren und verlassen?</string>
   <string name="BlockUnblockDialog_block_s">%1$s blockieren?</string>
@@ -1107,7 +1107,7 @@
   <string name="WebRtcCallView__signal_voice_call">Signal-Sprachanruf …</string>
   <string name="WebRtcCallView__signal_video_call">Signal-Videoanruf …</string>
   <string name="WebRtcCallView__start_call">Anruf starten</string>
-  <string name="WebRtcCallView__group_call">Gruppenanruf</string>
+  <!-- Removed by excludeNonTranslatables <string name="WebRtcCallView__group_call">Gruppenanruf</string> -->
   <string name="WebRtcCallView__view_participants_list">Teilnehmer anzeigen</string>
   <string name="WebRtcCallView__your_video_is_off">Dein Video ist aus</string>
   <!--CallParticipantsListDialog-->
@@ -1885,7 +1885,7 @@ Schlüsselaustausch-Nachricht für eine ungültige Protokollversion empfangen</s
   <string name="preferences__typing_indicators">Tipp-Indikatoren</string>
   <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">Bei deaktivierten Tipp-Indikatoren kannst du auch die Tipp-Indikatoren anderer nicht sehen</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">Tastatur auffordern, personalisiertes Lernen auszuschalten</string>
-  <string name="preferences_app_protection__blocked_contacts">Blockierte Kontakte</string>
+  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__blocked_contacts">Blockierte Kontakte</string> -->
   <string name="preferences_chats__when_using_mobile_data">Bei mobiler Datenverbindung</string>
   <string name="preferences_chats__when_using_wifi">Bei WLAN-Verbindung</string>
   <string name="preferences_chats__when_roaming">Bei Roaming</string>
