--- a/app/src/main/res/values-eo/strings.xml
+++ b/app/src/main/res/values-eo/strings.xml
@@ -80,7 +80,7 @@
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Eraro dum ludo de sonaĵo!</string>
   <!--BlockedContactsActivity-->
-  <string name="BlockedContactsActivity_blocked_contacts">Blokataj kontaktoj</string>
+  <!-- Removed by excludeNonTranslatables <string name="BlockedContactsActivity_blocked_contacts">Blokataj kontaktoj</string> -->
   <!--BlockUnblockDialog-->
   <string name="BlockUnblockDialog_block_and_leave_s">Ĉu bloki kaj forlasi %1$s?</string>
   <string name="BlockUnblockDialog_block_s">Ĉu bloki %1$s?</string>
@@ -1087,7 +1087,7 @@
   <string name="WebRtcCallView__signal_voice_call">Signal-voĉalvoko…</string>
   <string name="WebRtcCallView__signal_video_call">Signal-vidalvoko…</string>
   <string name="WebRtcCallView__start_call">Ekalvoki</string>
-  <string name="WebRtcCallView__group_call">Grup-alvoko</string>
+  <!-- Removed by excludeNonTranslatables <string name="WebRtcCallView__group_call">Grup-alvoko</string> -->
   <string name="WebRtcCallView__view_participants_list">Vidi partoprenantojn</string>
   <string name="WebRtcCallView__your_video_is_off">Via kamerao estas malŝaltita</string>
   <!--CallParticipantsListDialog-->
@@ -1872,7 +1872,7 @@ Ricevis mesaĝon pri interŝanĝo de ŝlosiloj por nevalida protokola versio.
   <string name="preferences__typing_indicators">Tajp-indikiloj</string>
   <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">Se tajp-indikiloj ne estas ŝaltitaj, vi ne vidos aliulajn tajp-indikilojn.</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">Peti al la klavaro malŝalti personan lernadon</string>
-  <string name="preferences_app_protection__blocked_contacts">Blokataj kontaktoj</string>
+  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__blocked_contacts">Blokataj kontaktoj</string> -->
   <string name="preferences_chats__when_using_mobile_data">Kiam uziĝas sendrataj datumoj</string>
   <string name="preferences_chats__when_using_wifi">Kiam uziĝas vifio</string>
   <string name="preferences_chats__when_roaming">Dum retmigrado</string>
