--- a/app/src/main/res/values-eu/strings.xml
+++ b/app/src/main/res/values-eu/strings.xml
@@ -80,7 +80,7 @@
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Errorea audioa erreproduzitzean!</string>
   <!--BlockedContactsActivity-->
-  <string name="BlockedContactsActivity_blocked_contacts">Blokeatutako kontaktuak</string>
+  <!-- Removed by excludeNonTranslatables <string name="BlockedContactsActivity_blocked_contacts">Blokeatutako kontaktuak</string> -->
   <!--BlockUnblockDialog-->
   <string name="BlockUnblockDialog_block_and_leave_s">%1$s blokeatu eta irten?</string>
   <string name="BlockUnblockDialog_block_s">Blokeatu %1$s?</string>
@@ -1110,7 +1110,7 @@
   <string name="WebRtcCallView__signal_voice_call">Signal ahots deia…</string>
   <string name="WebRtcCallView__signal_video_call">Signal bideo deia…</string>
   <string name="WebRtcCallView__start_call">Hasi Deia</string>
-  <string name="WebRtcCallView__group_call">Talde Deia</string>
+  <!-- Removed by excludeNonTranslatables <string name="WebRtcCallView__group_call">Talde Deia</string> -->
   <string name="WebRtcCallView__view_participants_list">Kideak ikusi</string>
   <string name="WebRtcCallView__your_video_is_off">Zure bideoa itzalita dago</string>
   <!--CallParticipantsListDialog-->
@@ -1898,7 +1898,7 @@ Inportatu \'SMSBackup and Restorekin\' bateragarria den enkriptatu gabeko babesk
   <string name="preferences__typing_indicators">Idazketa jakinarazleak</string>
   <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">Idazketa jakinarazleak desaktibatuta badaude, ezin izango duzu besteak idazten ari diren ikusi</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">Eskatu teklatuari pertsonalizatutako ikasketa desaktibatzeko</string>
-  <string name="preferences_app_protection__blocked_contacts">Blokeatutako kontaktuak</string>
+  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__blocked_contacts">Blokeatutako kontaktuak</string> -->
   <string name="preferences_chats__when_using_mobile_data">Datu mugikorrak erabiltzerakoan</string>
   <string name="preferences_chats__when_using_wifi">Wi-Fia erabiltzerakoan</string>
   <string name="preferences_chats__when_roaming">Ibiltaritzako datuak erabiltzerakoan</string>
