--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -80,7 +80,7 @@
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">خطا در پخش صوت!</string>
   <!--BlockedContactsActivity-->
-  <string name="BlockedContactsActivity_blocked_contacts">مخاطبین مسدود شده</string>
+  <!-- Removed by excludeNonTranslatables <string name="BlockedContactsActivity_blocked_contacts">مخاطبین مسدود شده</string> -->
   <!--BlockUnblockDialog-->
   <string name="BlockUnblockDialog_block_and_leave_s">مسدود کردن و ترک گروه %1$s؟</string>
   <string name="BlockUnblockDialog_block_s"> مسدود کردن %1$s؟</string>
@@ -1109,7 +1109,7 @@
   <string name="WebRtcCallView__signal_voice_call">تماس صوتی Signal</string>
   <string name="WebRtcCallView__signal_video_call">تماس تصویری Signal</string>
   <string name="WebRtcCallView__start_call">شروع تماس</string>
-  <string name="WebRtcCallView__group_call">تماس گروهی</string>
+  <!-- Removed by excludeNonTranslatables <string name="WebRtcCallView__group_call">تماس گروهی</string> -->
   <string name="WebRtcCallView__view_participants_list">مشاهدهٔ شرکت کنندگان</string>
   <string name="WebRtcCallView__your_video_is_off">ویدئوی شما خاموش است</string>
   <!--CallParticipantsListDialog-->
@@ -1894,7 +1894,7 @@
   <string name="preferences__typing_indicators">نشانگرهای نوشتن</string>
   <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">اگر نشانگرهای نوشتن غیرفعال باشند، شما قادر به دیدن نشانگرهای نوشتن دیگران نخواهید بود.</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">درخواست از صفحه‌کلید برای غیرفعال کردن یادگیری شخصی‌سازی شده</string>
-  <string name="preferences_app_protection__blocked_contacts">مخاطبین مسدود شده</string>
+  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__blocked_contacts">مخاطبین مسدود شده</string> -->
   <string name="preferences_chats__when_using_mobile_data">هنگام استفاده از داده‌های موبایل</string>
   <string name="preferences_chats__when_using_wifi">هنگام استفاده از Wi-Fi</string>
   <string name="preferences_chats__when_roaming">هنگام رومینگ</string>
