--- a/app/src/main/res/values-ga/strings.xml
+++ b/app/src/main/res/values-ga/strings.xml
@@ -77,7 +77,7 @@
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Tharla botún ag seinm na fuaime!</string>
   <!--BlockedContactsActivity-->
-  <string name="BlockedContactsActivity_blocked_contacts">Teagmhálaithe le bac orthu</string>
+  <!-- Removed by excludeNonTranslatables <string name="BlockedContactsActivity_blocked_contacts">Teagmhálaithe le bac orthu</string> -->
   <!--BucketedThreadMedia-->
   <string name="BucketedThreadMedia_Today">Inniu</string>
   <string name="BucketedThreadMedia_Yesterday">Inné</string>
@@ -976,7 +976,7 @@ a shonrú</string>
   <string name="preferences__if_read_receipts_are_disabled_you_wont_be_able_to_see_read_receipts">Má tá adhmálacha léamh díchumasaithe, ní féidir leat adhmálacha léamh ó dhaoine else a fheiceáil.</string>
   <string name="preferences__typing_indicators">Leideoirí clóscríobh</string>
   <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">Má múchtar leideoirí clóscríobh, ní bheifear in ann leideoirí clóscríobh ó daoine eile a fheiscint.</string>
-  <string name="preferences_app_protection__blocked_contacts">Teagmhálaithe le bac orthu</string>
+  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__blocked_contacts">Teagmhálaithe le bac orthu</string> -->
   <string name="preferences_chats__when_using_mobile_data">Nuair atá feidhm á baint as sonraí soghluaiste</string>
   <string name="preferences_chats__when_using_wifi">Nuair atá feidhm á baint as Wi-Fi</string>
   <string name="preferences_chats__when_roaming">Nuair atá tú ag fánaíocht</string>
