--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -80,7 +80,7 @@
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Errore nel riprodurre l\'audio!</string>
   <!--BlockedContactsActivity-->
-  <string name="BlockedContactsActivity_blocked_contacts">Contatti bloccati</string>
+  <!-- Removed by excludeNonTranslatables <string name="BlockedContactsActivity_blocked_contacts">Contatti bloccati</string> -->
   <!--BlockUnblockDialog-->
   <string name="BlockUnblockDialog_block_and_leave_s">Bloccare e abbandonare %1$s?</string>
   <string name="BlockUnblockDialog_block_s">Bloccare %1$s?</string>
@@ -1109,7 +1109,7 @@
   <string name="WebRtcCallView__signal_voice_call">Chiamata vocale Signal…</string>
   <string name="WebRtcCallView__signal_video_call">Videochiamata Signal…</string>
   <string name="WebRtcCallView__start_call">Inizia chiamata</string>
-  <string name="WebRtcCallView__group_call">Chiamata di gruppo</string>
+  <!-- Removed by excludeNonTranslatables <string name="WebRtcCallView__group_call">Chiamata di gruppo</string> -->
   <string name="WebRtcCallView__view_participants_list">Visualizza i partecipanti</string>
   <string name="WebRtcCallView__your_video_is_off">Il tuo video è spento</string>
   <!--CallParticipantsListDialog-->
@@ -1896,7 +1896,7 @@
   <string name="preferences__typing_indicators">Indicatori di scrittura</string>
   <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">Se gli indicatori di scrittura sono disabilitati, non sarai in grado di vedere quando gli altri utenti stanno digitando.</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">Richiedi alla tastiera di disattivare l\'apprendimento delle parole digitate</string>
-  <string name="preferences_app_protection__blocked_contacts">Contatti bloccati</string>
+  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__blocked_contacts">Contatti bloccati</string> -->
   <string name="preferences_chats__when_using_mobile_data">Via rete cellulare</string>
   <string name="preferences_chats__when_using_wifi">Via Wi-Fi</string>
   <string name="preferences_chats__when_roaming">In roaming</string>
