--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -86,7 +86,7 @@
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">שגיאה בניגון שמע!</string>
   <!--BlockedContactsActivity-->
-  <string name="BlockedContactsActivity_blocked_contacts">אנשי קשר חסומים</string>
+  <!-- Removed by excludeNonTranslatables <string name="BlockedContactsActivity_blocked_contacts">אנשי קשר חסומים</string> -->
   <!--BlockUnblockDialog-->
   <string name="BlockUnblockDialog_block_and_leave_s">לחסום ולעזוב את %1$s?</string>
   <string name="BlockUnblockDialog_block_s">לחסום את %1$s?</string>
@@ -1205,7 +1205,7 @@
   <string name="WebRtcCallView__signal_voice_call">שיחה קולית של Signal…</string>
   <string name="WebRtcCallView__signal_video_call">שיחת וידאו של Signal…</string>
   <string name="WebRtcCallView__start_call">התחל שיחה</string>
-  <string name="WebRtcCallView__group_call">שיחה קבוצתית</string>
+  <!-- Removed by excludeNonTranslatables <string name="WebRtcCallView__group_call">שיחה קבוצתית</string> -->
   <string name="WebRtcCallView__view_participants_list">הצג משתתפים</string>
   <string name="WebRtcCallView__your_video_is_off">הוידאו שלך כבוי</string>
   <!--CallParticipantsListDialog-->
@@ -2018,7 +2018,7 @@
   <string name="preferences__typing_indicators">מחווני הקלדה</string>
   <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">אם מחווני הקלדה מושבתים, לא תוכל לראות מחווני הקלדה מאחרים.</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">בקש מהמקלדת להשבית למידה מותאמת אישית</string>
-  <string name="preferences_app_protection__blocked_contacts">אנשי קשר חסומים</string>
+  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__blocked_contacts">אנשי קשר חסומים</string> -->
   <string name="preferences_chats__when_using_mobile_data">בעת שימוש בנתונים ניידים</string>
   <string name="preferences_chats__when_using_wifi">בעת שימוש ב־Wi-Fi</string>
   <string name="preferences_chats__when_roaming">בעת נדידה</string>
