--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -77,7 +77,7 @@
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">音声再生中にエラーが発生しました！</string>
   <!--BlockedContactsActivity-->
-  <string name="BlockedContactsActivity_blocked_contacts">ブロック中の連絡先</string>
+  <!-- Removed by excludeNonTranslatables <string name="BlockedContactsActivity_blocked_contacts">ブロック中の連絡先</string> -->
   <!--BlockUnblockDialog-->
   <string name="BlockUnblockDialog_block_and_leave_s">%1$s から抜けてブロックしますか？</string>
   <string name="BlockUnblockDialog_block_s">%1$s をブロックしますか？</string>
@@ -441,6 +441,7 @@
   <string name="GroupManagement_invite_multiple_users">これらのユーザをを自動的にこのグループに追加することはできません。\n\nユーザは招待を受け入れるまで、グループメッセージを閲覧できません。</string>
   <!--GroupsV1MigrationLearnMoreBottomSheetDialogFragment-->
   <string name="GroupsV1MigrationLearnMore_what_are_new_groups">新しいグループとは？</string>
+  <string name="GroupsV1MigrationLearnMore_new_groups_have_features_like_mentions">新グループには、@mentionや管理者機能などがあります。将来、新しい機能も追加されます。</string>
   <string name="GroupsV1MigrationLearnMore_all_message_history_and_media_has_been_kept">すべてのメッセージ履歴とメディアは、アップグレード前から維持されています。</string>
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">グループを抜けますか？</string>
@@ -1048,7 +1049,7 @@
   <string name="WebRtcCallView__signal_voice_call">Signal音声通話…</string>
   <string name="WebRtcCallView__signal_video_call">Signalビデオ通話…</string>
   <string name="WebRtcCallView__start_call">通話を開始する</string>
-  <string name="WebRtcCallView__group_call">グループ通話</string>
+  <!-- Removed by excludeNonTranslatables <string name="WebRtcCallView__group_call">グループ通話</string> -->
   <string name="WebRtcCallView__view_participants_list">参加者を確認する</string>
   <string name="WebRtcCallView__your_video_is_off">あなたの映像はオフです</string>
   <!--CallParticipantsListDialog-->
@@ -1813,7 +1814,7 @@
   <string name="preferences__typing_indicators">入力中アイコン</string>
   <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">入力中アイコンが無効の場合、相手の入力中アイコンも表示されません。</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">キーボードに自動学習の停止を要求します</string>
-  <string name="preferences_app_protection__blocked_contacts">ブロック中の連絡先</string>
+  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__blocked_contacts">ブロック中の連絡先</string> -->
   <string name="preferences_chats__when_using_mobile_data">モバイルデータ通信利用時</string>
   <string name="preferences_chats__when_using_wifi">Wi-Fi利用時</string>
   <string name="preferences_chats__when_roaming">ローミング時</string>
