--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -80,7 +80,7 @@
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Fout bij afspelen van audio!</string>
   <!--BlockedContactsActivity-->
-  <string name="BlockedContactsActivity_blocked_contacts">Geblokkeerde contactpersonen</string>
+  <!-- Removed by excludeNonTranslatables <string name="BlockedContactsActivity_blocked_contacts">Geblokkeerde contactpersonen</string> -->
   <!--BlockUnblockDialog-->
   <string name="BlockUnblockDialog_block_and_leave_s">%1$s blokkeren en verlaten?</string>
   <string name="BlockUnblockDialog_block_s">%1$s blokkeren?</string>
@@ -1110,7 +1110,7 @@
   <string name="WebRtcCallView__signal_voice_call">Signal audio-oproep …</string>
   <string name="WebRtcCallView__signal_video_call">Signal video-oproep …</string>
   <string name="WebRtcCallView__start_call">Oproep beginnen</string>
-  <string name="WebRtcCallView__group_call">Groepsoproep</string>
+  <!-- Removed by excludeNonTranslatables <string name="WebRtcCallView__group_call">Groepsoproep</string> -->
   <string name="WebRtcCallView__view_participants_list">Deelnemers weergeven</string>
   <string name="WebRtcCallView__your_video_is_off">Je camera staat uit</string>
   <!--CallParticipantsListDialog-->
@@ -1901,7 +1901,7 @@ Signal zal nu toestemming vragen om je contactenlijst te lezen, om na te gaan wi
   <string name="preferences__typing_indicators">Typindicatoren</string>
   <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">Als typindicatoren zijn uitgeschakeld kunnen anderen niet zien of je aan het typen bent, maar je zult ook niet kunnen zien wanneer anderen aan het typen zijn.</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">Voorkom gepersonaliseerd leren door het toetsenbord</string>
-  <string name="preferences_app_protection__blocked_contacts">Geblokkeerde contactpersonen</string>
+  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__blocked_contacts">Geblokkeerde contactpersonen</string> -->
   <string name="preferences_chats__when_using_mobile_data">Bij mobielegegevensoverdracht</string>
   <string name="preferences_chats__when_using_wifi">Bij wifi-verbinding</string>
   <string name="preferences_chats__when_roaming">Bij roaming</string>
