--- a/app/src/main/res/values-pa/strings.xml
+++ b/app/src/main/res/values-pa/strings.xml
@@ -77,7 +77,7 @@
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">ਔਡੀਓ ਚਲੌਣ ਵਿੱਚ ਗਲਤੀ</string>
   <!--BlockedContactsActivity-->
-  <string name="BlockedContactsActivity_blocked_contacts">ਰੋਕੇ ਹੋਏ ਸੰਪਰਕ </string>
+  <!-- Removed by excludeNonTranslatables <string name="BlockedContactsActivity_blocked_contacts">ਰੋਕੇ ਹੋਏ ਸੰਪਰਕ </string> -->
   <!--BlockUnblockDialog-->
   <string name="BlockUnblockDialog_block_and_leave_s">ਰੋਕੋ ਅਤੇ ਛੱਡੋ %1$s ?</string>
   <string name="BlockUnblockDialog_block_s">%1$s ਨੂੰ ਬਲੌਕ ਕਰਨਾ ਹੈ?</string>
@@ -1437,7 +1437,7 @@
   <string name="preferences__typing_indicators">ਟਾਈਪਿੰਗ ਸੰਕੇਤ</string>
   <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">ਜੇਕਰ ਟਾਈਪਿੰਗ ਸੂਚਕ ਅਸਮਰਥਿਤ ਹੈ, ਤਾਂ ਤੁਸੀਂ ਦੂਜਿਆਂ ਤੋਂ ਟਾਈਪਿੰਗ ਸੰਕੇਤ ਦੇਖਣ ਦੇ ਯੋਗ ਨਹੀਂ ਹੋਵੋਗੇ</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">ਵਿਅਕਤੀਗਤ ਸਿੱਖਣ ਨੂੰ ਅਸਮਰੱਥ ਬਣਾਉਣ ਲਈ ਕੀਬੋਰਡ ਨੂੰ ਬੇਨਤੀ ਕਰੋ </string>
-  <string name="preferences_app_protection__blocked_contacts">ਰੋਕੇ ਹੋਏ ਸੰਪਰਕ </string>
+  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__blocked_contacts">ਰੋਕੇ ਹੋਏ ਸੰਪਰਕ </string> -->
   <string name="preferences_chats__when_using_mobile_data">ਮੋਬਾਈਲ ਡਾਟਾ ਦੀ ਵਰਤੋਂ ਕਰਦੇ ਸਮੇਂ</string>
   <string name="preferences_chats__when_using_wifi">ਵਾਈ-ਫਾਈ ਦੀ ਵਰਤੋਂ ਕਰਦੇ ਸਮੇਂ</string>
   <string name="preferences_chats__when_roaming">ਰੋਮਿੰਗ ਸਮੇਂ</string>
