--- a/app/src/main/res/values-qu-rEC/strings.xml
+++ b/app/src/main/res/values-qu-rEC/strings.xml
@@ -62,7 +62,7 @@
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">¡Uyayta mana uyay usharinchu!</string>
   <!--BlockedContactsActivity-->
-  <string name="BlockedContactsActivity_blocked_contacts">Kikinpa yupaymashikunaka pakashkami</string>
+  <!-- Removed by excludeNonTranslatables <string name="BlockedContactsActivity_blocked_contacts">Kikinpa yupaymashikunaka pakashkami</string> -->
   <!--BucketedThreadMedia-->
   <string name="BucketedThreadMedia_Today">Kunan</string>
   <string name="BucketedThreadMedia_Yesterday">Kayna</string>
@@ -1023,7 +1023,7 @@ Shuk ranti pakallayupay chaski chayamurka, shuk ñawpa mana alli protocolo kashk
   <string name="preferences__read_receipts">Killkakatinata willachik </string>
   <string name="preferences__if_read_receipts_are_disabled_you_wont_be_able_to_see_read_receipts">Willachiykuna mana hapichishka kakpika, mana shuk mashikunapa willachiykunata rikuyta ushankichu.</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">Killkana antata mañay, paypaklla yachakuyta anchuchinkapak</string>
-  <string name="preferences_app_protection__blocked_contacts">Kikinpa mashi yupaykunaka pakashkami.</string>
+  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__blocked_contacts">Kikinpa mashi yupaykunaka pakashkami.</string> -->
   <string name="preferences_chats__when_using_mobile_data">Datosta hapichiska kashpa</string>
   <string name="preferences_chats__when_using_wifi">WiFita hapichishka kashpa</string>
   <string name="preferences_chats__when_roaming">Roamingta hapichishka kashpa</string>
