--- a/app/src/main/res/values-sl/strings.xml
+++ b/app/src/main/res/values-sl/strings.xml
@@ -86,7 +86,7 @@
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Napaka pri predvajanju zvoka!</string>
   <!--BlockedContactsActivity-->
-  <string name="BlockedContactsActivity_blocked_contacts">Blokirani uporabniki/ce</string>
+  <!-- Removed by excludeNonTranslatables <string name="BlockedContactsActivity_blocked_contacts">Blokirani uporabniki/ce</string> -->
   <!--BlockUnblockDialog-->
   <string name="BlockUnblockDialog_block_and_leave_s">Blokiram in zapustim skupino %1$s?</string>
   <string name="BlockUnblockDialog_block_s">Blokiram uporabnika/co %1$s?</string>
@@ -1204,7 +1204,7 @@
   <string name="WebRtcCallView__signal_voice_call">Zvočni klic Signal …</string>
   <string name="WebRtcCallView__signal_video_call">Video klic Signal …</string>
   <string name="WebRtcCallView__start_call">Začni klic</string>
-  <string name="WebRtcCallView__group_call">Skupinski klic</string>
+  <!-- Removed by excludeNonTranslatables <string name="WebRtcCallView__group_call">Skupinski klic</string> -->
   <string name="WebRtcCallView__view_participants_list">Prikaži sodelujoče</string>
   <string name="WebRtcCallView__your_video_is_off">Vaš video je izključen</string>
   <!--CallParticipantsListDialog-->
@@ -2009,7 +2009,7 @@ Prejeto sporočilo za izmenjavo ključev za napačno različico protokola.</stri
   <string name="preferences__typing_indicators">Kazalniki tipkanja</string>
   <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">Če nimate vklopljenih kazalnikov tipkanja zase, tudi ne morete videti kdaj vaš partner tipka svoje sporočilo.</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">Zahteva tipkovnici za izklop personaliziranega učenja</string>
-  <string name="preferences_app_protection__blocked_contacts">Blokirani uporabniki/ce</string>
+  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__blocked_contacts">Blokirani uporabniki/ce</string> -->
   <string name="preferences_chats__when_using_mobile_data">Ob uporabi mobilnega omrežja</string>
   <string name="preferences_chats__when_using_wifi">Ob uporabi omrežja Wi-Fi</string>
   <string name="preferences_chats__when_roaming">Med gostovanjem</string>
