--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -80,7 +80,7 @@
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Ses oynatılırken hata!</string>
   <!--BlockedContactsActivity-->
-  <string name="BlockedContactsActivity_blocked_contacts">Engellenmiş kişiler</string>
+  <!-- Removed by excludeNonTranslatables <string name="BlockedContactsActivity_blocked_contacts">Engellenmiş kişiler</string> -->
   <!--BlockUnblockDialog-->
   <string name="BlockUnblockDialog_block_and_leave_s">%1$s grubunu engelle ve ayrıl?</string>
   <string name="BlockUnblockDialog_block_s">%1$s engellensin mi?</string>
@@ -1086,7 +1086,7 @@
   <string name="WebRtcCallView__signal_voice_call">Signal sesli arama…</string>
   <string name="WebRtcCallView__signal_video_call">Signal görüntülü arama…</string>
   <string name="WebRtcCallView__start_call">Arama Başlat</string>
-  <string name="WebRtcCallView__group_call">Grup Araması</string>
+  <!-- Removed by excludeNonTranslatables <string name="WebRtcCallView__group_call">Grup Araması</string> -->
   <string name="WebRtcCallView__view_participants_list">Katılımcıları Görüntüle</string>
   <string name="WebRtcCallView__your_video_is_off">Görüntünüz kapalı</string>
   <!--CallParticipantsListDialog-->
@@ -1870,7 +1870,7 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="preferences__typing_indicators">Yazma göstergeleri</string>
   <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">Yazma göstergeleri etkin değilse, başkalarının yazma göstergelerini göremeyeceksiniz.</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">Klavyenin kişiselleştirilmiş öğrenmeyi devre dışı bırakmasını iste</string>
-  <string name="preferences_app_protection__blocked_contacts">Engellenmiş kişiler</string>
+  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__blocked_contacts">Engellenmiş kişiler</string> -->
   <string name="preferences_chats__when_using_mobile_data">Mobil veri kullanırken</string>
   <string name="preferences_chats__when_using_wifi">Kablosuz ağ kullanırken</string>
   <string name="preferences_chats__when_roaming">Dolaşımdayken</string>
