--- a/app/src/main/res/values-ur/strings.xml
+++ b/app/src/main/res/values-ur/strings.xml
@@ -73,7 +73,7 @@
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">آڈیو چلانے میں خرابی ہو رہی ہے!</string>
   <!--BlockedContactsActivity-->
-  <string name="BlockedContactsActivity_blocked_contacts">بلاک کردہ رابطے</string>
+  <!-- Removed by excludeNonTranslatables <string name="BlockedContactsActivity_blocked_contacts">بلاک کردہ رابطے</string> -->
   <!--BlockUnblockDialog-->
   <string name="BlockUnblockDialog_group_members_will_be_able_to_add_you">گروپ ممبران آپ کو دوبارہ اس گروپ میں شامل کرسکیں گے۔</string>
   <string name="BlockUnblockDialog_unblock">ان بلاک</string>
@@ -1325,7 +1325,7 @@
   <string name="preferences__typing_indicators">ٹائپنگ انڈیکیٹرز</string>
   <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">اگر ٹائپنگ اندیکیٹرز غیر فعال ہیں، آپ دوسروں سے ٹائپنگ انڈیکیٹرز دیکھنے کے قابل نہیں ہیں۔</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">پرسنلایزڈ سیکھنے کو غیر فعال کرنے کے لئے کی بورڈ سے درخواست کریں</string>
-  <string name="preferences_app_protection__blocked_contacts">بلاک کردہ رابطے</string>
+  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__blocked_contacts">بلاک کردہ رابطے</string> -->
   <string name="preferences_chats__when_using_mobile_data">جب موبائل ڈیٹا استعمال کریں</string>
   <string name="preferences_chats__when_using_wifi">جب وائی فائی استعمال کریں</string>
   <string name="preferences_chats__when_roaming">جب رومنگ ہو رہی ہو</string>
