--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -77,7 +77,7 @@
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">播放音频出错！</string>
   <!--BlockedContactsActivity-->
-  <string name="BlockedContactsActivity_blocked_contacts">已屏蔽的联系人</string>
+  <!-- Removed by excludeNonTranslatables <string name="BlockedContactsActivity_blocked_contacts">已屏蔽的联系人</string> -->
   <!--BlockUnblockDialog-->
   <string name="BlockUnblockDialog_block_and_leave_s">屏蔽并离开%1$s?</string>
   <string name="BlockUnblockDialog_block_s">屏蔽%1$s?</string>
@@ -1042,7 +1042,7 @@
   <string name="WebRtcCallView__signal_voice_call">Signal 语音通话…</string>
   <string name="WebRtcCallView__signal_video_call">Signal 视频通话…</string>
   <string name="WebRtcCallView__start_call">发起通话</string>
-  <string name="WebRtcCallView__group_call">群组通话</string>
+  <!-- Removed by excludeNonTranslatables <string name="WebRtcCallView__group_call">群组通话</string> -->
   <string name="WebRtcCallView__view_participants_list">查看参与者</string>
   <string name="WebRtcCallView__your_video_is_off">您的视频已关闭</string>
   <!--CallParticipantsListDialog-->
@@ -1814,7 +1814,7 @@
   <string name="preferences__typing_indicators">“正在输入”提示</string>
   <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">禁用“正在输入”提示之后，无法查看其他用户的正在输入状态。</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">禁用键盘的个性化学习功能</string>
-  <string name="preferences_app_protection__blocked_contacts">已屏蔽联系人</string>
+  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__blocked_contacts">已屏蔽联系人</string> -->
   <string name="preferences_chats__when_using_mobile_data">当使用移动数据时</string>
   <string name="preferences_chats__when_using_wifi">当使用 WiFi 时</string>
   <string name="preferences_chats__when_roaming">当漫游时</string>
